--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -56,6 +56,21 @@
             <version>1.18.22</version> <!-- Utilisez la version la plus récente -->
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+
+        </dependency>
+
+
     </dependencies>
 
     <build>
