--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,8 @@
     <description>backend</description>
     <properties>
         <java.version>17</java.version>
+        <spqr-starter.version>0.0.4</spqr-starter.version>
+        <graphql-java-annotations.version>3.0.2</graphql-java-annotations.version>
     </properties>
     <dependencies>
         <dependency>
@@ -24,6 +26,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-graphql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.leangen.graphql</groupId>
+            <artifactId>graphql-spqr-spring-boot-starter</artifactId>
+            <version>${spqr-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -68,7 +75,17 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java-annotations</artifactId>
+            <version>${graphql-java-annotations.version}</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/district0x/graphql-query -->
+        <dependency>
+            <groupId>district0x</groupId>
+            <artifactId>graphql-query</artifactId>
+            <version>1.0.5</version>
+        </dependency>
 
     </dependencies>
 
