--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,8 @@
     "@apollo/client": "^3.0.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@popperjs/core": "^2.11.6",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "apollo-angular": "^5.0.0",
     "bootstrap": "^5.2.3",
     "component": "^1.1.0",
