--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,12 @@
         <spqr-starter.version>0.0.4</spqr-starter.version>
         <graphql-java-annotations.version>3.0.2</graphql-java-annotations.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>district0x-repo</id>
+            <url>https://repo.clojars.org</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
